mobile head and nav

--- a/src/components/common/Button/style.module.scss
+++ b/src/components/common/Button/style.module.scss
@@ -50,3 +50,10 @@
 .icon {
   margin-right: 8px;
 }
+
+@media (max-width: 768px) {
+  .btn {
+    width: -webkit-fill-available;
+    text-align: center;
+  }
+}
