--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -1,5 +1,15 @@
 .midnav {
+  font-size: 19px;
   display: flex;
-  justify-content: space-evenly;
-  margin: 0 130px;
+  justify-content: center;
+  width: 100%;
+  gap: 50px;
+}
+
+@media (max-width: 900px) {
+  .midnav {
+    overflow-x: scroll;
+    gap: 24px;
+    justify-content: unset;
+  }
 }
