--- a/src/components/Layout/Item/style.module.scss
+++ b/src/components/Layout/Item/style.module.scss
@@ -24,3 +24,18 @@
   background: rgba(255, 255, 255, 0.92);
   box-shadow: 0px 3px 32px rgba(0, 0, 0, 0.07), 0px 1px 4px rgba(0, 0, 0, 0.07);
 }
+
+@media (max-width: 768px) {
+  .midnavAbs {
+    overflow-x: scroll;
+    gap: 24px;
+    justify-content: unset;
+  }
+  .logo {
+    margin-left: unset;
+    padding: 12px 24px;
+  }
+  .abs {
+    top: 2450px;
+  }
+}
