--- a/src/components/Layout/Section/style.module.scss
+++ b/src/components/Layout/Section/style.module.scss
@@ -170,6 +170,14 @@
   }
 }
 
+.line {
+  height: 2px;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 38px;
+  margin: 30px 0;
+}
+
 @media (max-width: 768px) {
   .section,
   .doloreSection {
