--- a/src/components/common/MidNav/style.module.scss
+++ b/src/components/common/MidNav/style.module.scss
@@ -1,4 +1,5 @@
 .item {
+  --item-color: 198;
   border: unset;
   font-family: var(--font-primary);
   font-size: 19px;
@@ -7,6 +8,11 @@
   padding: 20px 0;
   display: flex;
   text-transform: capitalize;
+  color: hsla(var(--item-color), 100%, 50%, 1);
+}
+
+.item:hover {
+  background-color: hsla(var(--item-color), 100%, 50%, 0.07);
 }
 
 .itemIcon {
