--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -4,10 +4,30 @@
   justify-content: center;
   width: 100%;
   gap: 50px;
+  position: sticky;
+  top: 80px;
+  height: 78px;
+  z-index: 10;
+}
+
+.colorChange {
+  font-size: 19px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 50px;
+  position: sticky;
+  top: 78px;
+  height: 70px;
+  z-index: 10;
+  background: rgba(255, 255, 255, 0.92);
+  box-shadow: 0px 3px 32px rgba(0, 0, 0, 0.07), 0px 1px 4px rgba(0, 0, 0, 0.07);
+  backdrop-filter: blur(12px);
 }
 
 @media (max-width: 900px) {
-  .midnav {
+  .midnav,
+  .colorChange {
     overflow-x: scroll;
     gap: 24px;
     justify-content: unset;
