--- a/src/components/Layout/Section/style.module.scss
+++ b/src/components/Layout/Section/style.module.scss
@@ -53,15 +53,15 @@
 }
 
 .itemImgDolore {
-  height: 510px;
-  width: 510px;
+  height: 600px;
+  width: 600px;
   border-radius: 50%;
   position: absolute;
   opacity: 0.1;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  right: -150px;
+  right: -180px;
   top: 5px;
 }
 
@@ -128,11 +128,11 @@
     brightness(94%) contrast(101%);
 }
 
-.linkBtn {
+.doloreLinkBtn {
   cursor: pointer;
   box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.07), 0px 2px 4px rgba(0, 0, 0, 0.07);
   border-radius: 32px;
-  padding: 18px;
+  padding: 15px;
   color: var(--white);
 }
 
@@ -173,6 +173,16 @@
   background: rgba(255, 255, 255, 0.08);
   border-radius: 38px;
   margin: 30px 0;
+}
+
+.linkBtn {
+  cursor: pointer;
+  --link-color: 198;
+  color: hsla(var(--link-color), 100%, 43%, 1);
+}
+
+.linkBtn:hover {
+  color: hsla(var(--link-color), 100%, 50%, 1);
 }
 
 @media (max-width: 768px) {
@@ -224,5 +234,9 @@
   }
   .icon {
     padding: 24px;
+  }
+  .itemImgDolore {
+    width: 800px;
+    height: 800px;
   }
 }
