--- a/src/components/Layout/Section/style.module.scss
+++ b/src/components/Layout/Section/style.module.scss
@@ -142,13 +142,13 @@
 }
 
 .doloreLinkBtn {
-  // --link-color: 198;
+  --link-color: 198;
   cursor: pointer;
   box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.07), 0px 2px 4px rgba(0, 0, 0, 0.07);
   border-radius: 32px;
   padding: 15px;
   color: var(--white);
-  // background-color: hsla(var(--link-color), 100%, 50%, 1);
+  background-color: hsla(var(--link-color), 100%, 50%, 1);
 }
 
 .itemImg {
@@ -192,12 +192,13 @@
 
 .linkBtn {
   cursor: pointer;
-  // --link-color: 198;
-  // color: hsla(var(--link-color), 100%, 43%, 1);
+  --link-color: 198;
+  color: hsla(var(--link-color), 100%, 43%, 1);
 }
 
 .linkBtn:hover {
-  // color: hsla(var(--link-color), 100%, 50%, 1);
+  --link-color: 198;
+  color: hsla(var(--link-color), 100%, 50%, 1);
 }
 
 @media (max-width: 768px) {
